atualiei o codigo com novaas tags

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
                 allowfullscreen></iframe>
         </div>
     </section>
+    <section>
+        <h2> Outras Sugestões de Videos </h2>
+        <div class="categoria-videos">
+            <a href=https://www.youtube.com/watch?v=PfzEgS_mKfE>
+                <img src="https://www.youtube.com/watch?v=PfzEgS_mKfE"/>
+            </a>
+            <a href=https://www.youtube.com/watch?v=o7WjNVzzwAk>
+                <img src="https://www.youtube.com/watch?v=BQlKNrpmhlM"/>
+
+                 <a href=https://www.youtube.com/watch?v=bTutNM9mJRM>
+                <img src="https://www.youtube.com/watch?v=F9DXZoV97w8"/>
+            </a>
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
