atualizei o codigo com novos gaps

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>AULAS SOBRE GEOGRAFIA</header>
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>CONCEITOS GEOGRÁFICOS - PAISAGEM, LUGAR, TERRITÓRIO, REGIÃO - PROFESSOR RAFAEL BARRETO (GEOGRAFIA)</h1>
             <p>#geografia</p>
@@ -23,19 +23,20 @@
                 allowfullscreen></iframe>
         </div>
     </section>
-    <section>
+    <section class="chamada">
         <h2> Outras Sugestões de Videos </h2>
         <div class="categoria-videos">
             <a href=https://www.youtube.com/watch?v=PfzEgS_mKfE>
-                <img src="https://www.youtube.com/watch?v=PfzEgS_mKfE"/>
+                <img src="https://www.youtube.com/watch?v=PfzEgS_mKfE" />
             </a>
             <a href=https://www.youtube.com/watch?v=o7WjNVzzwAk>
-                <img src="https://www.youtube.com/watch?v=BQlKNrpmhlM"/>
+                <img src="https://www.youtube.com/watch?v=BQlKNrpmhlM" />
+            </a>
 
-                 <a href=https://www.youtube.com/watch?v=bTutNM9mJRM>
-                <img src="https://www.youtube.com/watch?v=F9DXZoV97w8"/>
+            <a href=https://www.youtube.com/watch?v=bTutNM9mJRM>
+                <img src="https://www.youtube.com/watch?v=F9DXZoV97w8" />
             </a>
-            </a>
+
         </div>
     </section>
 </body>
