--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="pt-BR">
 
 <head>
     <link rel="stylesheet" href="style.css">
@@ -23,18 +23,18 @@
                 allowfullscreen></iframe>
         </div>
     </section>
-    <section class="chamada">
+    <section class="categoria">
         <h2> Outras Sugestões de Videos </h2>
         <div class="categoria-videos">
             <a href=https://www.youtube.com/watch?v=PfzEgS_mKfE>
-                <img src="https://www.youtube.com/watch?v=PfzEgS_mKfE" />
+                <img src="https://img.youtube.com/vi/PfzEgS_mKfE/maxresdefault.jpg" />
             </a>
             <a href=https://www.youtube.com/watch?v=o7WjNVzzwAk>
-                <img src="https://www.youtube.com/watch?v=BQlKNrpmhlM" />
+                <img src="https://img.youtube.com/vi/o7WjNVzzwAk/maxresdefault.jpg" />
             </a>
 
             <a href=https://www.youtube.com/watch?v=bTutNM9mJRM>
-                <img src="https://www.youtube.com/watch?v=F9DXZoV97w8" />
+                <img src="https://img.youtube.com/vi/bTutNM9mJRM/maxresdefault.jpg" />
             </a>
 
         </div>
