--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <section class="categoria">
         <h2> Outras Sugestões de Videos </h2>
         <div class="categoria-videos">
-            <a href=https://www.youtube.com/watch?v=PfzEgS_mKfE>
+            <a href="https://www.youtube.com/watch?v=PfzEgS_mKfE">
                 <img src="https://img.youtube.com/vi/PfzEgS_mKfE/maxresdefault.jpg" />
             </a>
-            <a href=https://www.youtube.com/watch?v=o7WjNVzzwAk>
+            <a href="https://www.youtube.com/watch?v=o7WjNVzzwAk">
                 <img src="https://img.youtube.com/vi/o7WjNVzzwAk/maxresdefault.jpg" />
             </a>
 
-            <a href=https://www.youtube.com/watch?v=bTutNM9mJRM>
+            <a href="https://www.youtube.com/watch?v=bTutNM9mJRM">
                 <img src="https://img.youtube.com/vi/bTutNM9mJRM/maxresdefault.jpg" />
             </a>
 
